# ML-Project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  index.html  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
app/: __init__.py  main.py  main_simple.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/dependencies/: auth.py  model_cache.py  rate_limiter.py
app/services/: cache.py  feature_engineering.py  inference.py  monitoring.py  storage.py
config/: base.yaml  development.yaml  production.yaml  schema.yaml  staging.yaml
docker/: Dockerfile.api  Dockerfile.feast  Dockerfile.mlflow  Dockerfile.trainer  Dockerfile.triton  docker-compose.yml
ml/evaluation/: backtest.py  explainability.py  metrics.py
ml/inference/: __init__.py  ensemble.py  optimizer.py  predictor.py  preprocessing.py
ml/models/: __init__.py  lightgbm_model.py  model_utils.py  neural_network.py
ml/registry/: mlflow_client.py  model_versioning.py
ml/training/: __init__.py  cross_validation.py  data_loader.py  feature_pipeline.py  hyperparameter_tuning.py  model.py  train.py
monitoring/alerts/: alert_rules.yml
monitoring/grafana/: model_performance.json  system_health.json
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda.ipynb  02_feature_importance.ipynb  03_experiments.ipynb
scripts/: backfill_features.py  deploy.sh  migrate_db.py  stress_test.py
tests/: complete_test.py  full_test.py  production_test.py  simple_test.py
tests/simple/: test_ci.py  (+1 more)
(+27 files in other folders)
