[tool.poetry]
name = "real-estate-price-predictor"
version = "2.0.0"
description = "Production ML system for real estate price prediction"
authors = ["ML Engineering Team <ml@company.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
mlflow = "^2.8.0"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.24.3"
optuna = "^3.3.0"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
structlog = "^24.1.0"
orjson = "^3.9.10"
tenacity = "^8.2.3"
aiohttp = "^3.9.1"
aiokafka = "^0.8.0"
feast = "^0.34.0"
great-expectations = "^0.18.8"
pyspark = "^3.5.0"
numba = "^0.59.0"
joblib = "^1.3.2"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
black = "^23.11.0"
pre-commit = "^3.5.0"
k6 = "^0.45.0"

[tool.poetry.scripts]
train = "ml.training.train:run"
serve = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true